[project]
name = "airc-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "irdinsmore1", email = "irdinsmore1@geisinger.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.28.1",
    "pydicom>=3.0.1",
]

[project.scripts]
airc-extract = "airc_extract:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
