[project]
name = "airc-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "irdinsmore1", email = "irdinsmore1@geisinger.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "polars>=1.28.1",
    "pydicom>=3.0.1",
    "tqdm>=4.67.1",
]

[project.scripts]
airc-extract = "airc_extract:main"
airc-create-config = "airc_extract:create_airc_config"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.7",
]
